# uibk_cpp_project

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  Work Split.md  codecov.yml  vcpkg-configuration.json  vcpkg.json
.github/codecov/: codecov.yml
.github/workflows/: ci-linux.yml  ci-windows.yml
apps/: main.cpp
assets/raw/: character.ase  enemy_01.ase  icons-32x32.ase
cmake/: compile_flags.cmake
config/: game-config.json
docs/: Work Split.md  game-design-ideas.md
include/controller/: controller.hpp  input_state.hpp
include/controller/debug/: debug_context.hpp  debug_state.hpp  game_debug_settings.hpp
include/controller/input/: input_state.hpp
include/controller/persistence/: config_game.hpp  leaderboard.hpp  persisted_game.hpp  persistence_manager.hpp
include/controller/presentation/: color.hpp
include/controller/state/: state.hpp  state_action.hpp  state_manager.hpp  state_stack.hpp  state_transition_action.hpp  state_type.hpp
include/controller/view/: button.hpp  card.hpp  font.hpp  sprite.hpp  text.hpp  view.hpp  view_item.hpp
include/controller/views/: button.hpp  state.hpp
include/game/: game.hpp  game_state.hpp
include/game/debug/: game_debug_session.hpp  game_debug_state.hpp
include/game/ecs/: component_storage.hpp  entity.hpp  registry.hpp  view.hpp
include/game/ecs/components/: camera.hpp  enemy_tag.hpp  map.hpp  player_tag.hpp  position.hpp  sprite.hpp  velocity.hpp
include/game/ecs/systems/: animation_system.hpp  camera_system.hpp  input_system.hpp  movement_system.hpp
include/mylib/: foo.hpp
include/ui/: debug_ui.hpp  input_handler.hpp  renderer.hpp  ui.hpp
src/: foo.cpp
src/controller/: controller.cpp
src/controller/persistence/: persistence_manager.cpp
src/controller/state/: state.cpp  state_manager.cpp  state_stack.cpp
src/controller/views/: state.cpp
src/game/: game.cpp  game_state.cpp
src/game/systems/: animation_system.cpp  camera_system.cpp  input_system.cpp  movement_system.cpp
src/ui/: debug_ui.cpp  input_handler.cpp  renderer.cpp  ui.cpp
tests/: foo_test.cpp
tests/controller/: controller_test.cpp  input_state_test.cpp
tests/controller/input/: input_state_test.cpp
tests/controller/persistence/: persistence_manager_test.cpp
tests/controller/state/: state_manager_test.cpp  state_test.cpp
tests/game/: game_state_test.cpp  game_test.cpp
tests/game/ecs/: component_storage_test.cpp  registry_test.cpp
tests/game/ecs/systems/: animation_system_test.cpp  camera_system_test.cpp  input_system_test.cpp  movement_system_test.cpp
tests/shared/: util.cpp  util.hpp
tests/ui/: input_handler_test.cpp  renderer_test.cpp  ui_test.cpp
